removed overflow, fixed height

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,8 +13,7 @@ body {
   background-color: rgb(0, 0, 0);
   flex-flow: column nowrap;
   gap: 10px;
-  height: 100vh;
-  overflow: auto;
+  height: 100%;
   padding: 0px;
   position: relative;
   /* The image used */
